--- a/redshift/redshift.conf
+++ b/redshift/redshift.conf
@@ -9,6 +9,14 @@ temp-night=2000
 ; 1 will gradually apply the new screen temperature over a couple of seconds.
 fade=1
 
+; Solar elevation thresholds.
+; By default, Redshift will use the current elevation of the sun to determine
+; whether it is daytime, night or in transition (dawn/dusk). When the sun is
+; above the degrees specified with elevation-high it is considered daytime and
+; below elevation-low it is considered night.
+;elevation-high=3
+;elevation-low=-6
+
 ; Custom dawn/dusk intervals.
 ; Instead of using the solar elevation, the time intervals of dawn and dusk
 ; can be specified manually. The times must be specified as HH:MM in 24-hour
