--- a/polybar/config.ini
+++ b/polybar/config.ini
@@ -28,7 +28,7 @@ alert = #9869b2
 pad1=0
 
 [bar/primary]
-monitor = DisplayPort-0
+monitor = HDMI-1
 background = ${colors.background}
 foreground = ${colors.foreground}
 height = 40
@@ -57,7 +57,7 @@ font-5 = Noto Sans Mono CJK TC:size=13
 
 modules-left = i3 jpntime
 modules-center = date
-modules-right = weather light dark pulseaudio ip memory cpu cpu_temp tray
+modules-right = pulseaudio ip memory cpu cpu_temp tray
 
 wm-restack = i3
 scroll-up = #i3.prev
@@ -65,7 +65,7 @@ scroll-down = #i3.next
 cursor-click = pointer
 ;=====================================================================================================================
 [bar/secondary]
-monitor = DisplayPort-1
+monitor = DP-10
 bottom = false
 background = ${colors.background}
 foreground = ${colors.foreground}
@@ -102,8 +102,8 @@ scroll-down = #i3.next
 cursor-click = pointer
 ;=====================================================================================================================
 [bar/third]
-monitor = DVI-D-0
-bottom = true
+monitor = eDP-1
+bottom = false
 background = ${colors.background}
 foreground = ${colors.foreground}
 height = 40
@@ -129,9 +129,9 @@ font-3 = Noto Sans CJK JP:size=14:antialias=true;0		# (Japanese) Band names, etc
 font-4 = FontAwesome:size=14;0
 font-5 = Noto Sans Mono CJK TC:size=14
 
-modules-left = i3 
+modules-left = i3 jpntime
 modules-center = date
-modules-right = 
+modules-right = pulseaudio ip memory cpu cpu_temp tray
 
 wm-restack = i3
 scroll-up = #i3.prev
@@ -202,7 +202,7 @@ click-left = bash $HOME/.config/polybar/tinybar.sh
 
 [module/ip]
 type=custom/script
-exec=echo "%{F#0bef26}$(ip -4 -o addr show enp40s0 | awk '{print $4}')"
+exec=echo "%{F#0bef26}$(ip -4 -o addr show enp5s0f4u1u4 | awk '{print $4}')"
 interval = 5
 format-underline = #0bef26
 
@@ -253,21 +253,6 @@ type=custom/script
 exec=TZ='Japan' date "+%R"
 interval=60
 
-[module/weather]
-type=custom/script
-exec=curl -s 'wttr.in/Chicago?format=3' | cut -c 10-
-exec-if = ping wttr.in -c 1
-interval=13000
-format-underline = #0befff
-
-[module/notweather]
-type = custom/script
-exec = echo "%{F#ffffff} $(/home/$USER/Scripts/polybar-forecast)"
-exec-if = ping openweathermap.org -c 1
-color=
-interval = 600
-label-font = 3
-
 [module/i3]
 type = internal/i3
 format = <label-state> <label-mode>
@@ -314,18 +299,6 @@ label-urgent-padding = 1
 [module/aoeu]
 type = custom/script
 exec = echo ""
-
-[module/light]
-type = custom/script
-exec = echo "💡"
-interval = 1
-click-left = ~/Scripts/lighton.sh
-
-[module/dark]
-type = custom/script
-exec = echo "🌙"
-interval = 1
-click-left = ~/Scripts/lightoff.sh
 
 [module/playing]
 type = custom/script
