--- a/i3/config
+++ b/i3/config
@@ -204,10 +204,7 @@ bindsym $mod+Shift+a move workspace to output left
 bindsym $mod+Shift+o move workspace to output up
 
 # Lock i3
-#bindsym $mod+Shift+l exec i3lock -c 000000
-bindsym $mod+Shift+l exec ~/Scripts/lock.sh
-#exec xautolock -detectsleep -time 5 -locker "~/Scripts/lock.sh" -notify 30 -notifier "notify-send -u critical -t 10000 -- 'locking screen in 30 seconds'"
-
+bindsym $mod+Shift+l exec i3lock-fancy-rapid 5 6
 
 # Open calendar
 bindsym $mod+c exec gsimplecal
@@ -245,13 +242,11 @@ bindsym --release $mod+shift+f exec xrandr --output DP-1 --mode 1920x1080 --pos 
 bindsym --release $mod+shift+m exec ~/Scripts/toggle_polybar.sh
 
 # Hide wallpaper
-bindsym --release $mod+shift+b exec feh --bg-fill /HDD/Media/Pictures/black.png
-#exec_always feh --bg-fill ~/Pictures/Wallpapers/black.jpg
+exec_always feh --bg-fill ~/Pictures/wp.jpg
+bindsym --release $mod+shift+w exec feh --bg-fill ~/Pictures/wp.jpg
 
-bindsym --release $mod+shift+w exec ~/Scripts/wallpaper.sh hutao
 #exec_always ~/Scripts/wallpaper.sh hutao
 #bindsym --release $mod+shift+w exec ~/Scripts/wallpaper-single.sh
-exec_always ~/Scripts/wallpaper-single.sh
 #bindsym --release $mod+shift+d exec ~/Scripts/dailyjournal.sh
 
 bindsym --release $mod+shift+t exec typora todo.md
