--- a/polybar/config.ini
+++ b/polybar/config.ini
@@ -50,8 +50,8 @@ module-margin-right = 1
 font-0 = Fira Mono:size=13;0
 #font-1 = Weather Icons:size=13;0
 font-1 = NotoEmoji:scale=10
-font-2 = Wuncon Siji:antialias=false:pixelsize=13;1		# Symbols (CPU, RAM, etc.)
-font-3 = Noto Sans CJK JP:size=13:antialias=true;0		# (Japanese) Band names, etc.
+font-2 = Wuncon Siji:antialias=false:pixelsize=13;1
+font-3 = Noto Sans CJK JP:size=13:antialias=true;0
 font-4 = FontAwesome:size=13;0
 font-5 = Noto Sans Mono CJK TC:size=13
 
@@ -125,7 +125,7 @@ module-margin-right = 1
 font-0 = Fira Mono:size=14;0
 font-1 = Weather Icons:size=14;0
 font-2 = Wuncon Siji:size=14;1		# Symbols (CPU, RAM, etc.)
-font-3 = Noto Sans CJK JP:size=14:antialias=true;0		# (Japanese) Band names, etc.
+font-3 = Noto Sans CJK JP:size=14:antialias=true;0		# (Japane
 font-4 = FontAwesome:size=14;0
 font-5 = Noto Sans Mono CJK TC:size=14
 
