--- a/polybar/config.ini
+++ b/polybar/config.ini
@@ -28,7 +28,7 @@ alert = #9869b2
 pad1=0
 
 [bar/primary]
-monitor = HDMI-1
+monitor = $(xrandr | grep -oE '^HDMI-[0-9]* connected' | sed 's/ connected//')
 background = ${colors.background}
 foreground = ${colors.foreground}
 height = 40
@@ -65,7 +65,7 @@ scroll-down = #i3.next
 cursor-click = pointer
 ;=====================================================================================================================
 [bar/secondary]
-monitor = DP-10
+monitor =$(xrandr | grep -oE '^DP-[0-9]* connected' | sed 's/ connected//')
 bottom = false
 background = ${colors.background}
 foreground = ${colors.foreground}
@@ -139,7 +139,6 @@ scroll-down = #i3.next
 cursor-click = pointer
 ;=====================================================================================================================
 [bar/tray]
-#monitor=DP-2
 override-redirect = true
 radius = 8
 padding-left = 0
