--- a/polybar/config.ini
+++ b/polybar/config.ini
@@ -28,7 +28,7 @@ alert = #9869b2
 pad1=0
 
 [bar/primary]
-monitor = $(xrandr | grep -oE '^HDMI-[0-9]* connected' | sed 's/ connected//')
+monitor = ${env:MONITOR}
 background = ${colors.background}
 foreground = ${colors.foreground}
 height = 40
@@ -65,7 +65,7 @@ scroll-down = #i3.next
 cursor-click = pointer
 ;=====================================================================================================================
 [bar/secondary]
-monitor =$(xrandr | grep -oE '^DP-[0-9]* connected' | sed 's/ connected//')
+monitor = ${env:MAIN}
 bottom = false
 background = ${colors.background}
 foreground = ${colors.foreground}
@@ -102,7 +102,7 @@ scroll-down = #i3.next
 cursor-click = pointer
 ;=====================================================================================================================
 [bar/third]
-monitor = eDP-1
+monitor = ${env:MONITOR2}
 bottom = false
 background = ${colors.background}
 foreground = ${colors.foreground}
@@ -131,7 +131,7 @@ font-5 = Noto Sans Mono CJK TC:size=14
 
 modules-left = i3 jpntime
 modules-center = date
-modules-right = pulseaudio ip memory cpu cpu_temp tray
+modules-right = highdetailcpu
 
 wm-restack = i3
 scroll-up = #i3.prev
