fixed display issues

--- a/polybar/config.ini
+++ b/polybar/config.ini
@@ -57,7 +57,7 @@ font-5 = Noto Sans Mono CJK TC:size=13
 
 modules-left = i3 jpntime
 modules-center = date
-modules-right = pulseaudio ip memory cpu cpu_temp tray
+modules-right = pulseaudio battery ip memory cpu cpu_temp tray
 
 wm-restack = i3
 scroll-up = #i3.prev
@@ -94,7 +94,7 @@ font-5 = Noto Sans Mono CJK TC:size=14
 
 modules-left = i3 jpntime
 modules-center = date
-modules-right = highdetailcpu
+modules-right = battery highdetailcpu
 
 wm-restack = i3
 scroll-up = #i3.prev
@@ -131,7 +131,7 @@ font-5 = Noto Sans Mono CJK TC:size=14
 
 modules-left = i3 jpntime
 modules-center = date
-modules-right = highdetailcpu
+modules-right = battery highdetailcpu
 
 wm-restack = i3
 scroll-up = #i3.prev
@@ -201,7 +201,8 @@ click-left = bash $HOME/.config/polybar/tinybar.sh
 
 [module/ip]
 type=custom/script
-exec=echo "%{F#0bef26}$(ip -4 -o addr show enp5s0f4u1u4 | awk '{print $4}')"
+exec=echo "%{F#0bef26}$(ip -4 -o addr show wlp2s0 | awk '{print $4}')"
+#exec=echo "%{F#0bef26}$((ip -4 -o addr show enp5s0f4u1u4 || ip -4 -o addr show wlp2s0) | awk '{print $4; exit}')"
 interval = 5
 format-underline = #0bef26
 
@@ -350,3 +351,31 @@ bar-volume-fill-font = 2
 bar-volume-empty = ─
 bar-volume-empty-font = 2
 bar-volume-empty-foreground = ${colors.foreground-alt}
+
+[module/battery]
+type = internal/battery
+
+; This is useful in case the battery never reports 100% charge
+; Default: 100
+full-at = 99
+
+; format-low once this charge percentage is reached
+; Default: 10
+; New in version 3.6.0
+low-at = 5
+
+; Use the following command to list batteries and adapters:
+; $ ls -1 /sys/class/power_supply/
+battery = BAT0
+adapter = ADP1
+
+; If an inotify event haven't been reported in this many
+; seconds, manually poll for new values.
+;
+; Needed as a fallback for systems that don't report events
+; on sysfs/procfs.
+;
+; Disable polling by setting the interval to 0.
+;
+; Default: 5
+poll-interval = 5
