--- a/polybar/config.ini
+++ b/polybar/config.ini
@@ -139,6 +139,7 @@ scroll-down = #i3.next
 cursor-click = pointer
 ;=====================================================================================================================
 [bar/tray]
+monitor = ${env:MONITOR}
 override-redirect = true
 radius = 8
 padding-left = 0
@@ -201,8 +202,8 @@ click-left = bash $HOME/.config/polybar/tinybar.sh
 
 [module/ip]
 type=custom/script
-exec=echo "%{F#0bef26}$(ip -4 -o addr show wlp2s0 | awk '{print $4}')"
-#exec=echo "%{F#0bef26}$((ip -4 -o addr show enp5s0f4u1u4 || ip -4 -o addr show wlp2s0) | awk '{print $4; exit}')"
+#exec=echo "%{F#0bef26}$(ip -4 -o addr show wlp2s0 | awk '{print $4}')"
+exec=echo "%{F#0bef26}$((ip -4 -o addr show enp5s0f4u1u4 || ip -4 -o addr show wlp2s0) | awk '{print $4; exit}')"
 interval = 5
 format-underline = #0bef26
 
