--- a/polybar/config.ini
+++ b/polybar/config.ini
@@ -94,7 +94,7 @@ font-5 = Noto Sans Mono CJK TC:size=14
 
 modules-left = i3 jpntime
 modules-center = date
-modules-right = battery highdetailcpu
+modules-right =  pulseaudio battery highdetailcpu
 
 wm-restack = i3
 scroll-up = #i3.prev
